--- a/dev/scss/contact.scss
+++ b/dev/scss/contact.scss
@@ -10,7 +10,7 @@
             padding-top: 10px;
             padding-bottom: 10px;
             padding-left: 10px;
-            background: #50b490;
+            background: #2e5ec0;
             color: white;
             font-weight: bold;
         }
