--- a/dev/scss/staff-page.scss
+++ b/dev/scss/staff-page.scss
@@ -10,7 +10,7 @@
             color: white;
             text-align: left;
             font-weight: bold;
-            background: #50b490;
+            background: #2e5ec0;
             padding-left: 10px;
             padding-top: 7.5px;
             padding-bottom: 7.5px;
@@ -21,7 +21,7 @@
         }
 
         .card-title{
-            color: #50b490;
+            color: #2e5ec0;
             font-weight: bold;
         }  
 
