--- a/dev/scss/_nav-footer.scss
+++ b/dev/scss/_nav-footer.scss
@@ -6,7 +6,7 @@
     padding-bottom: 5px;
 
     .footerHeading{
-        background: #FD9A28;
+        background: rgb(89, 175, 201);
         padding-top: 10px;
         padding-bottom: 10px;
         height: 40px;
@@ -76,7 +76,7 @@
     }
     
     .col-lg-3 ul li a:hover{
-        color: #50b490;
+        color: white;
     }
     .footer-copyright{
         color: white;
