--- a/dev/scss/_wrapper.scss
+++ b/dev/scss/_wrapper.scss
@@ -11,7 +11,7 @@
     }
 
     .pageHeading{
-        color: #50b490;
+        color: #2e5ec0;
         text-align: center;
         padding-bottom: 10px;
         font-weight: bold;
