--- a/dev/scss/overview.scss
+++ b/dev/scss/overview.scss
@@ -18,7 +18,7 @@
 
         .infoHeading{
             color: white;
-            background: #50b490;
+            background: #2e5ec0;
             padding-top: 7.5px;
             padding-bottom: 7.5px;
             padding-left: 10px;
