--- a/scss/schedulePage.scss
+++ b/scss/schedulePage.scss
@@ -12,7 +12,7 @@
          }
         
         #scheduleButton{
-            background: #031b81;
+            background: #2e5ec0;;
             color: white;
             font-weight: bold;
             margin-bottom: 5px;
@@ -35,7 +35,7 @@
         }
 
         .monthNameDropdown .btn-success{
-            background-color: #031b81;
+            background-color: #2e5ec0;;
             font-weight: bold;
         }
         
@@ -76,7 +76,7 @@
             width: 100%;
             height:40px;
             padding: 10px 0;
-            background: #031b81;
+            background: #2e5ec0;;
             text-align: center;
             color: white;
         }
@@ -148,7 +148,7 @@
             position: relative;
             text-align: center;
             color: white;
-            background-color: #031b81;
+            background-color: #2e5ec0;
             font-weight: bold;
         }
 
