fixed bugs related to js

--- a/styles/index.css
+++ b/styles/index.css
@@ -81,4 +81,4 @@
     .welcomeWrapper .col-lg-4:nth-child(3) {
       margin: 20px auto; } }
 
-/*# sourceMappingURL=welcomePage.css.map */
+/*# sourceMappingURL=index.css.map */
